Begin talking about dialectical metaphysics

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -180,11 +180,23 @@ Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hi
 Subscribing to such a gentle `plausible thesis' (even though such concessions to likelihood would cause Kant to shudder) yields us another very interesting conclusion. That this self-perceptive act -- call it self-awareness or the synthetic unity of apperception -- is a necessary condition for all cognitive beings. Without the imposition of the a priori form of the self into the very nature of intuition, the synthetic process of merging sensibility and understanding can never happen (as per Kant's demonstration in the Analytic). This conclusion provides us with a possible answer to Kant's prescient question, that which so haunts the author of this essay: "It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard" \autocite[B72]{hackett}. Perhaps it has indeed been decided \ldots\ and the lack of artificial, cognitive agents is the proof. There is room for further inquiry, however. Kant's casual qualification of his question -- "that of any finite thinking being", supports our examination, in the same circumspect way that a bloodstain may support a detective on a case.
 
 \noindent
-For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensuate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and co-ordinate. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is \emph{not} a finite, thinking being. To perceive all as a part of the self, separated not by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
+For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and co-ordinate. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is \emph{not} a finite, thinking being. To perceive all as a part of the self, separated not by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
 
+\section*{The Limitations of Rational Science}
 % The objective/subjective nature of the empirical sciences
+It is clear now that the cognitive act defines and constrains by necessity, the very boundaries of what the cognitive agent (i.e. the knowing being) can know. While we are unable to generate any meaningful knowledge about the \emph{`thing-in-itself'} (the phrase which Kant uses to refer to objects outside of the intuitive forms), Kant demonstrates quite consistently throughout the \emph{Critique} that our knowledge is still empirical. Indeed, it is his very thesis that the broad applicability of mathematics to the natural world is due to his very transcendental construction. The gist of his argument can be found summarised in his \emph{Prolegomena to Any Future Metaphysics}:
 
+\begin{quote}
+  Nature considered \emph{materialiter} is the \emph{sum of all objects of experience}. We are here only concerned with this, since otherwise things that could never become objects of an experience\footnote{e.g. things that are not subject to the formal a prioriae of space, time, and unified with the categories.} if they had to be cognised according to their nature would force us to accept concepts those significance could never be given \emph{in concerto}. \ldots\ cognition of that which cannot be an object of experience would be hyperphysical.
+
+  \autocite[4:296]{prolegomena}
+\end{quote}
+
+\noindent
+Therefore, it is in the necessary nature of empirical cognition to allow us to apply mathematical intuition to it. The presence of Kant's transcendental elements allow the possibility of such mathematical intuition. And it is a third, derivative faculty of reason (which Kant properly introduces in the Transcendental Dialectic) -- that anticipates the preconditions of said cognitions, always searching for it's antecedent cause. It is this faculty of human reason which crowns the \emph{Critique} with its infamous title. Yet, this is also the name to which Kant then proceeds to censure, on the basis of reason's metaphysical limitations. For despite reason's empirical industry, it is lost outside the confines of possible experience. The ultimate brand of banishment is cast, when Kant demonstrates a series of dialectical conflicts of pure reason, termed the paralogisms, antinomies, and the theological ideal.
 
 % Whether or not metaphysical knowledge is limited by reason (?)
+These dialectical illusions all share a common form, which is an eventual proof that for such a given syllogism, pure reason can be coerced into proving the falsity of both possible options. Given the syllogism of "Either A is True, or B is True" (i.e. $A \lor B$), should both options be shown to be false, then neither option can be true as the result of falsifying it's antithesis. This results not in a contradiction, but rather yields alternate pairs of self-consistent theses and antitheses. This \emph{dialectic} (defined in the truest etymology of that word, \emph{δια-λεκτική}) is taken by Kant to be the final nail in the logic of pure reason, rendering it forever banished from the kingdom of metaphysics.
+
 
 % Note: the conclusion is located at ./sections/conclusion.tex
