Final commit on the parable before the battery dies on my laptop!

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -215,6 +215,8 @@ I present the body of my counterargument in the form of a parable\footnote{An Ae
   Perched atop the parapets of their Mathematics department, the \textsc{Mathematician} is just about to jump, when he is swiftly plucked off the ledge by a stranger. It is the \textsc{Professor!}
 
   "Why do you wish to kill yourself, my student?" asks the \textsc{Professor}. The young \textsc{Mathematicians} blushes, and explains their thoughts from above. The \textsc{Professor} chuckles, and sits down to explain:
+
+  "\emph{Gödel's Theorems of Incompleteness} is not a proof of mathematic's falsehood", he says. "But rather, it is a proof \emph{mathematics is infinite}."
 \end{quote}
 
 % Note: the conclusion is located at ./sections/conclusion.tex
