Edited the transcendental aesthetic

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,7 +1,7 @@
 \section*{The Transcendental Aesthetic}
 Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins the Copernican leap that upturns our world.
 
-For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
+For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}.\footnote{Kant defines intuition in part, as a direct presentation of an object. This is in contrast to concepts, which are only presentations of intuitions.} However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
 
 \begin{quote}
 The capacity (a receptivity) to acquire presentations as a result of the way in which we are affected by objects is called \textbf{sensibility}. Hence by means of sensibility objects are \emph{given} to us, and it alone supplies us with \emph{intuitions}.
@@ -12,7 +12,7 @@ The capacity (a receptivity) to acquire presentations as a result of the way in 
 \noindent
 The objective, material study of our sensibility (i.e. the means in which we are receptive to sensation) is an empirical science, one that is perhaps closer kin to ophthalmology\footnote{The medical science of eyeballs.}, than that of any rank befitting a philosopher. Hence, it is no surprise that Kant dusts away the empirical trappings of a mundane aesthetic science, to ask: "when we abstract away all matter of intuition, what is left there to remain?" For the \emph{matter} of intuition is always an object (and hence, objective, and therefore, empirical) -- to strip intuitions of their matter is to leave only their \emph{form}. There can be only two possibilities regarding the \emph{formal} nature of intuition. Either we are to deny its existence altogether -- as to say that the evaporation of intuitive matter yields only a bare, deposit-less vapour -- or we are to acknowledge that there is indeed some metaphysical residue, a crystallisation of formal structure that underlies all human intuition.
 
-The first case is an apparent impossibility to Kant, one that even a tourist can understand on grounds both metaphysical and mundane. For to argue that there is no formal nature behind human intuition is to accept that all intuitions are inherently structureless. It is to accept that there is no deep, underlying relationship between sensory intuitions -- a nihilistic capitulation so craven that Kant devotes the majority of the Critique's introduction (as well as a good part of his \emph{Prolegomena}) in refuting. He argues that the lack of an a priori, formal structure behind intuition will prevent the apodeictic\footnote{necessarily or self-evidently true.} certainty of mathematics and geometry. Likewise, to use a more mundane analogy -- the mundane, material nature of the human sensory organs by necessity create some formal structure which will underpin our intuition. It is no great leap to take such mundane, aesthetic a prioriae, and to make a further jump that abstracts away even the material nature of our sensory biology -- and ask the \emph{transcendental} question, of what are the a priori forms behind intuition:
+The first case is an apparent impossibility to Kant, one that even a tourist can understand on grounds both metaphysical and mundane. For to argue that there is no formal nature behind human intuition is to accept that all intuitions are inherently structureless. It is to accept that there is no deep, underlying relationship between sensory intuitions -- a nihilistic capitulation so craven that Kant devotes the majority of the Critique's introduction (as well as a good part of his \emph{Prolegomena}) in refuting. He argues that the lack of an a priori, formal structure behind intuition will prevent the apodeictic\footnote{Necessarily or self-evidently true.} certainty of mathematics and geometry. Likewise, to use a more mundane analogy -- the material nature of the human sensory organs by necessity create \emph{some} formal structure which will underpin our intuition. It is no great leap to take such mundane, aesthetic a prioriae, and to make a further jump that abstracts away even the material nature of our sensory biology -- and ask the \emph{transcendental} question, of what are the a priori forms behind intuition:
 
 \begin{quote}
   There must, therefore, be a science of all principles of a priori sensibility; I call such a science \emph{transcendental aesthetic}. It constitutes the first part of the transcendental doctrine of elements, and stands in contrast to that [part of the] transcendental doctrine of elements which contains the principles of pure thought and is called transcendental logic.
@@ -20,7 +20,7 @@ The first case is an apparent impossibility to Kant, one that even a tourist can
   \autocite[B36]{hackett}
 \end{quote}
 
-So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}. We are guided to a view of the twin peaks of space (which founds our \emph{outer sense}) and time (which founds our \emph{inner sense}). These mountains serve as the core geology of our transcendental landscape -- we are cautioned against thinking that there are any other -- the lesser distractions of colour, extension, or motion are but superficial molehills which take no part in the a priori bedrock of transcendental aesthetics:
+So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}. We are guided to a view of the twin peaks of space (which founds our \emph{outer sense}) and time (which founds our \emph{inner sense}).\footnote{Interestingly, Kant never presents the outer sense nor inner sense in any formal manner. Hence we take these not to be proper faculties of the human cognition, but more as convenient phrases to reference the sensory characteristic of intuition through space and time.} These mountains serve as the core geology of our transcendental landscape -- we are cautioned against thinking that there are any other. The lesser distractions of colour, extension, or motion are but superficial molehills which take no part in the a priori bedrock of transcendental aesthetics:
 
 \begin{quote}
   Transcendental aesthetic cannot contain more than these two elements, i.e., space and time. This is evident from the fact that all other concepts belonging to sensibility presuppose something empirical.
@@ -28,7 +28,7 @@ So what do we find, in this new-found, metaphysical science, of the transcendent
   \autocite[B58]{hackett}
 \end{quote}
 
-To the untrained glaze of the tourist, it is reasonable for us to ask: "just how firm are the grounds upon which such mountains protrude?" Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility -- then all of our worldly intuitions are founded upon a mirage -- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism forever, should we not be rescued by Kant's ready alpenstock\footnote{a shepherd’s trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the necessary a priori which preconditions intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e. not \emph{subjective}). Likewise, by not being present in the object (i.e. not a property, accident, or attribute) -- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
+Now to the untrained gaze of the tourist, it is reasonable for us to ask: "just how firm are the grounds upon which such mountains protrude?" Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility -- then all of our worldly intuitions are founded upon a mirage -- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism\footnote{\emph{Idealism}: A metaphysical school of thought in which all reality is founded inseparably from human intuition. Such a view rejects the possibility of a true empirical science.} forever, should we not be rescued by Kant's ready alpenstock\footnote{a shepherd’s trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the necessary a priori which prerequisites intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e. not \emph{subjective}). This is what makes space and time empirically real. Likewise, by not being present in the object (i.e. not a property, accident, or attribute) -- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
 
 \begin{quote}
 Hence we assert that space is empirically real (as regards all possible outer experience), despite asserting that space is transcendentally ideal, i.e., that it is nothing as soon as we omit [that space is] the condition of the possibility of all experience and suppose space to be something underlying things in themselves.
@@ -38,7 +38,7 @@ Hence we assert that space is empirically real (as regards all possible outer ex
 
 Thus concludes the presentation (or to use Euclidean language, the \emph{enunciation}) of the two transcendental elements of space and time, from the metaphysical science of the transcendental aesthetic. The proper, demonstrative proof of these elements are naturally contained within Kant's \emph{Critique} itself, to which this simple tourist's journal dares not to re-attempt. However, naturally it is within the mete of every foreign visitor to question their guide. Hence we will ask (with the characteristic brazenness of a tourist): "to what is the industry of such metaphysical mountains?" Are these mountains mere wastes, suitable for no further purpose -- or do they yield productive quarries, that lead us to further knowledge in metaphysics? These transcendental elements of space and time are ultimately useful, for in their nature as the a priori forms that necessitate all intuition, they define the boundaries for what intuition can yield.
 
-For one, it is readily apparent that should space and time be the necessary condition for intuition, it is impossible for there to be any intuitive knowledge of objects without the forms of space and time. Such knowledge of the \emph{thing-in-itself}, the cognition of an object without the formal conditions of space and time, is impossible. This impossibility of knowing the thing-in-itself serves as a hard boundary for what intuition is capable of, marking all of our intuitive knowledge as knowledge of appearances alone:
+For one, it is readily apparent that should space and time be the necessary condition for intuition, it is impossible for there to be any intuitive knowledge of objects without the forms of space and time. Such \emph{immediate} knowledge of the \emph{thing-in-itself}\footnote{In contrast with the \emph{mediate} knowledge of an object through the intermediary a priori forms of space and time.}, the cognition of an object without the formal conditions of space and time, is impossible. This impossibility of knowing the thing-in-itself serves as a hard boundary for what intuition is capable of, marking all of our intuitive knowledge as knowledge of appearances alone:
 
 \begin{quote}
   [space and time] being merely conditions of sensibility, these a priori sources of cognition determine their own bounds; viz., they determine that they apply to objects merely insofar as these are regarded as appearances, but do not exhibit things in themselves. Appearances are the sole realm where these a priori sources of cognition are valid; if we go outside that realm, there is no further objective use that can be made of them.
@@ -47,12 +47,12 @@ For one, it is readily apparent that should space and time be the necessary cond
 \end{quote}
 
 \noindent
-And yet, such a border is not a destructive one -- these constraints of the sensible condition are not the concessions of foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we perceive. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the necessary a priori conditions for their appearance as the foundation for our reasoning.
+However, such a border is not a destructive one. These constraints of the sensible condition are not concessions seceded to foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish within it's bounds. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we perceive. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the necessary a priori conditions for their appearance as the foundation for our reasoning.
 
 \noindent
-It is this very generality, to which Kant takes as the foundation for mathematical intuition. Does it now follow that the universal applicability of mathematics rest in the foundation of these a priori forms behind intuition? Although some may think that the foundation of mathematics is secure now, to which we may close Kant's \emph{Critique} forever -- I caution that the mere existence of a priori forms behind intuition is not enough to sufficiently explain mathematical reasoning. For intuition serves only as the means in which we perceive empirical objects, not as a means in which we understand them. Mathematics deals not just with the intuitive process of appearances (i.e. the appearance of a triangle, that of a derivative), but also a discursive process of seeking the possibility of appearance (i.e. the creation of proofs, application of theorems). Such an act of seeking the possibility of appearance relies not merely on the a priori forms behind possible intuition, but also upon certain acts of understanding, which can only be found in the \emph{transcendental logic}. Hence, the transcendental aesthetic by itself is insufficient to explain the universal applicability of mathematics.
+It is this very generality, to which Kant takes as the foundation for mathematical intuition. Does it now follow that the universal applicability of mathematics rest in the foundation of these a priori forms behind intuition? Although some may think that the foundation of mathematics is secure now (to which we may close Kant's \emph{Critique} forever), I caution that the mere existence of a priori forms behind intuition is not enough to sufficiently explain mathematical reasoning. For intuition serves only as the means in which we \emph{perceive} (lit. intuit) empirical objects, not as a means in which we \emph{understand} them. Mathematics deals not just with the intuitive process of appearances (i.e. the appearance of a triangle, that of a derivative), but also a discursive process of seeking the possibility of appearance (i.e. the creation of proofs, application of theorems). Such an act of seeking the possibility of appearance relies not merely on the a priori forms behind possible intuition, but also upon certain acts of understanding, which can only be found in the \emph{transcendental logic}. Hence, the transcendental aesthetic by itself is insufficient to explain the universal applicability of mathematics. In order to truly understand the broad utility of mathematical thought, we must turn to Kant's \emph{transcendental logic}, which we will in due course.
 
-Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Scepticism and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on intuition is already a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
+Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Materialism\footnote{A philosophical school of thought which rejects metaphysics altogether, basing all knowledge on empirical intuition.} and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on general aesthetic intuition already establishes a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
 
 \begin{quote}
   There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
@@ -61,7 +61,10 @@ Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a m
 \end{quote}
 
 \noindent
-Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. For intuition alone does not cognition make -- the scion of the union of sensibility and understanding demands equal contribution from both parents. To understand the metaphysical groundwork for cognition, we must next examine the \emph{transcendental logic}. It is only in light of both the \emph{logic} and the \emph{aesthetic}, could we come to a proper assessment of Kant's \emph{Critique}. Our guide hurries us forth -- eager to apply his transcendental method of analysis, to the faculty of understanding. We will not make him wait.
+Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. For intuition alone does not cognition make -- the scion of the union of sensibility and understanding demands equal contribution from both parents. To understand the metaphysical groundwork for cognition, we must next examine the \emph{transcendental logic}. It is only in light of both the \emph{logic} and the \emph{aesthetic}, could we come to a proper assessment of Kant's \emph{Critique}. Our guide hurries us forth -- eager to apply his transcendental method of analysis, to the faculty of understanding.
+
+\noindent
+We will not make him wait.
 
 \section*{The Transcendental Logic}
 As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
